Preferences do not need to be passed to the WebProcess via WebPageCreationParameters since the store already is https://bugs.webkit.org/show_bug.cgi?id=222945

Reviewed by Simon Fraser.

Source/WebCore:

* page/EventHandler.cpp:
(WebCore::EventHandler::mouseDownMayStartSelect const):
Get textInteractionEnabled state from preferences, rather than copying its state to the page.

* page/Page.cpp:
(WebCore::m_shouldRelaxThirdPartyCookieBlocking):
* page/Page.h:
(WebCore::Page::textInteractionEnabled const): Deleted.
(WebCore::Page::setTextInteractionEnabled): Deleted.
* page/PageConfiguration.h:
Remove textInteractionEnabled state from Page/PageConfiguration have it use Settings like other settings.

Source/WebKit:

needsInAppBrowserPrivacyQuirks and textInteractionEnabled were both being passed to the WebProcess twice,
once via the preferences store, and once via explicit serialization.

Use the preferences infrastructure to do this for us instead, and remove a bunch of unneeded code.

* Shared/WebPageCreationParameters.cpp:
(WebKit::WebPageCreationParameters::encode const):
(WebKit::WebPageCreationParameters::decode):
* Shared/WebPageCreationParameters.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::creationParameters):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::m_lastNavigationWasAppBound):
(WebKit::WebPage::updatePreferences):

Source/WTF:

* Scripts/Preferences/WebPreferencesDebug.yaml:
NeedsInAppBrowserPrivacyQuirks is only ever accessed via the WebKit preferences store,
so does not need to be exposed in WebKitLegacy or WebCore. Achieve this by removing the
WebKitLegacy and WebCore defaults.


Canonical link: https://commits.webkit.org/235110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274192 268f45cc-cd09-0410-ab3c-d52691b4dbfc